--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "natours-api-nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
