--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "James Niyongira",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.5.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
